crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_range.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ range(100001) }}"
info:
  __minijinja_current_path: err_bad_range.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_bad_range.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "range has too many elements",
    name: "err_bad_range.txt",
}

invalid operation: range has too many elements
(in err_bad_range.txt:1:1)
