crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_super.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% extends \"bad_basic_block.txt\" %}\n{% block title %}My Title{% endblock %}\n{% block body %}\n  Changed stuff goes here. {{ super() }}\n{% endblock %}"
info:
  __minijinja_current_path: err_bad_super.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_bad_super.txt
---
!!!ERROR!!!

Error {
    kind: EvalBlock,
    detail: "error in super block",
    name: "err_bad_super.txt",
    source: Error {
        kind: UnknownFunction,
        detail: "Jinja macro or function `missing_function` is unknown",
        name: "err_bad_super.txt",
    },
}

could not render block: error in super block
(in err_bad_super.txt:4:28)

caused by: unknown function: Jinja macro or function `missing_function` is unknown
(in err_bad_super.txt:3:3)
