crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_bad_test_arguments.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{% for item in seq %}\n  {% if item is even(42) %}\n    {{ item }}\n  {% endif %}\n{% endfor %}"
info:
  __minijinja_current_path: err_bad_test_arguments.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
  seq:
    - 1
    - 2
    - 3
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_bad_test_arguments.txt
---
!!!ERROR!!!

Error {
    kind: TooManyArguments,
}

too many arguments
